[package]
name = "flintdb"
version = "0.1.0"
edition = "2024"
authors = ["Alex Holmes <alex@sed.dev>"]
license = "MIT OR Apache-2.0"
description = "A lighter SQLite"
repository = "https://github.com/alexhholmes/flint"
keywords = ["flint", "flintdb", "sqlite", "sql", "database"]
categories = ["database"]
readme = "README.md"
exclude = [".gitignore"]

[features]
sqlx = ["dep:sqlx"]

[dependencies]
sqlparser = "0.59.0"
sqlx = { version = "0.8.6", optional = true }