[package]
name = "flintdb"
version = "0.1.1"
edition = "2024"
authors = ["Alex Holmes <alex@sed.dev>"]
license = "MIT OR Apache-2.0"
description = "A lighter database"
repository = "https://github.com/alexhholmes/flint"
keywords = ["flint", "flintdb", "postgres", "sql", "oltp"]
categories = ["database"]
readme = "README.md"
exclude = [".gitignore"]

[[bin]]
name = "flint"
path = "bin/flint.rs"

[dependencies]
libc = "0.2"
pgwire = "0.35.0"
sqlparser = "0.59.0"
tokio = { version = "1.48.0", features = ["full"]}
async-trait = "0.1.89"
futures = "0.3.31"
