[package]
name = "flintdb"
version = "0.1.2"
edition = "2024"
authors = ["Alex Holmes <alex@sed.dev>"]
license = "AGPL-3.0-only"
description = "A lighter database"
repository = "https://github.com/flintdata/flint"
keywords = ["flint", "flintdb", "postgres", "sql", "oltp"]
categories = ["database"]
readme = "README.md"
exclude = [".gitignore"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
# All workspace members (core flintdb + extensions)
# To add a new extension: add "contrib/<name>" to members list
members = [
    ".",
    "contrib/point-ext",
]

[[bin]]
name = "flint"
path = "bin/flint.rs"

[dependencies]
libc = "0.2"
pgwire = "0.35.0"
sqlparser = "0.59.0"
tokio = { version = "1.48.0", features = ["full"]}
async-trait = "0.1.89"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ulid = "1.1"
parking_lot = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0"
inventory = { version = "0.3", optional = true }

[dev-dependencies]
serial_test = "3.0"

[features]
default = ["extensions"]
extensions = ["inventory"]  # Core extension system with auto-discovery via inventory crate

